[project]
name = "vllm-model-server"
version = "0.1.0"
description = "vLLM-based OpenAI-compatible model serving"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.8.0",
    "huggingface-hub>=0.27.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "openai>=1.50.0",
]
